# yuhuu-function

./: .env.example  .gitignore  ALTERNATIVES.md  API_IMPLEMENTATION.md  AUTH_INTEGRATION_SUMMARY.md  CONSOLIDATION_PLAN.md  Cargo.toml  Dockerfile  MIGRATION_AND_API_SUMMARY.md  MODELS_ARCHITECTURE.md  README.md  SCHEMA_FIX_README.md  TESTING_SPOUSE_MARITAL_STATUS.md  deny.toml  fix_schema_migration.sql  move_seaql_migrations_to_church.sql  run_migration.sh  test-spouse-marital-status.sh
.cargo/: audit.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  deploy.yml  migrations.yml  release.yml  security-audit.yml
crates/auth-integration/: Cargo.toml  README.md
crates/auth-integration/src/: admin_guard.rs  client.rs  jwt.rs  lib.rs  middleware.rs  service.rs  subject.rs  user_context.rs
crates/config-env/: Cargo.toml  README.md
crates/config-env/src/: services.rs
crates/database/: Cargo.toml
crates/database/src/: config.rs
crates/functions/: Cargo.toml
crates/functions/src/: lib.rs
crates/functions/src/features/: mod.rs
crates/functions/src/features/admin/: handlers.rs  mod.rs  routes.rs  service.rs
crates/functions/src/features/admin/handlers/: mod.rs  user_resources.rs  visits.rs
crates/functions/src/features/bootstrap/: handlers.rs  mod.rs  routes.rs
crates/functions/src/features/dinners/: handlers.rs  mod.rs  routes.rs  service.rs
crates/functions/src/features/family_relationships/: handlers.rs  mod.rs  routes.rs  service.rs
crates/functions/src/features/health/: handlers.rs  mod.rs  routes.rs
crates/functions/src/features/membership_history/: handlers.rs  mod.rs  routes.rs  service.rs
crates/functions/src/features/profiles/: handlers.rs  mod.rs  routes.rs  service.rs
crates/functions/src/features/roles/: handlers.rs  mod.rs  routes.rs  service.rs
crates/functions/src/features/spiritual_milestones/: handlers.rs  mod.rs  routes.rs  service.rs
crates/functions/src/features/user_roles/: handlers.rs  mod.rs  routes.rs  service.rs
crates/functions/src/features/user_skills/: handlers.rs  mod.rs  routes.rs  service.rs
crates/functions/src/features/users/: handlers.rs  mod.rs  routes.rs  service.rs
crates/functions/src/features/visits/: mod.rs  routes.rs
crates/functions/src/features/visits/handlers/: mod.rs  user_assignments.rs
crates/functions/src/features/visits/services/: assignment_service.rs  family_service.rs  mod.rs
crates/functions/src/handlers/: health.rs  mod.rs  profiles.rs  users.rs
crates/functions/tests/: response_shape.rs  spouse_marital_status_integration.rs
crates/graphql/: Cargo.toml
crates/graphql/src/: handlers.rs  lib.rs  mutation.rs  query.rs  schema.rs  strapi_client.rs  types.rs
crates/http-response/: Cargo.toml
crates/http-response/src/: create_response.rs  error_handler.rs  http_code_w.rs  http_response_builder.rs  lib.rs  prepared_response.rs  response_object.rs
crates/logic/: Cargo.toml
crates/logic/src/: lib.rs
crates/models/: Cargo.toml
crates/models/src/: cell_group.rs  lib.rs  mod.rs  role.rs  user.rs  user_profile.rs  zone.rs
crates/models/src/dto/: attendance.rs  cell_group.rs  dinner.rs  dinner_participant.rs  family_relationship.rs  giving.rs  membership_history.rs  ministry.rs  mod.rs  role.rs  spiritual_milestone.rs  user.rs  user_address.rs  user_membership.rs  user_ministry.rs  user_profile.rs  user_role.rs  user_skill.rs  visit_assignment.rs  visitable_family.rs
crates/models/src/internal/: admin.rs  bootstrap.rs  dinner.rs  family_relationship.rs  membership_history.rs  mod.rs  profile.rs  role.rs  spiritual_milestone.rs  user.rs  user_role.rs  user_skill.rs  visit_assignment.rs  (+1 more)
main-app/: Cargo.toml
main-app/src/: main.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20260203_000001_create_church_schema.rs  m20260203_000002_create_users_table.rs  m20260203_000003_create_user_profiles_table.rs  m20260203_000004_create_user_addresses_table.rs  m20260203_000005_create_zones_table.rs  m20260203_000006_create_cell_groups_table.rs  m20260203_000007_create_roles_table.rs  m20260203_000008_create_ministries_table.rs  m20260203_000009_create_user_memberships_table.rs  m20260203_000010_create_user_roles_table.rs  m20260203_000011_create_user_ministries_table.rs  m20260203_000012_create_attendances_table.rs  m20260203_000013_create_givings_table.rs  m20260203_000014_seed_default_roles.rs  m20260203_000015_create_dinners_table.rs  m20260203_000016_create_dinner_participants_table.rs  m20260203_000017_create_family_relationships_table.rs  m20260203_000018_create_spiritual_milestones_table.rs  m20260203_000019_create_membership_history_table.rs  m20260203_000020_create_user_skills_table.rs  m20260203_000021_alter_user_profiles_add_education_fields.rs  m20260312_000022_create_visit_status_enum.rs  m20260312_000023_create_visitable_families_table.rs  m20260312_000024_create_visit_assignments_table.rs  m20260313_000025_add_visit_status_cast.rs
