[package]
name = "migration"
version = "0.1.0"
edition = "2021"

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
tokio = { workspace = true }

[dependencies.sea-orm-migration]
version = "1.1.11"
features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
]
