[package]
name = "migration"
version = "0.1.0"
edition = "2021"

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"

[[bin]]
name = "run_church_migrations"
path = "src/bin/run_church_migrations.rs"

[dependencies]
async-trait = "0.1"
tokio = { workspace = true }
uuid = { workspace = true }

[dependencies.sea-orm]
version = "1.1.5"
features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
]

[dependencies.sea-orm-migration]
version = "1.1.11"
features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
]
