[package]
name = "auth-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
jsonwebtoken = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
base64 = { workspace = true }
sea-orm = { workspace = true }
dotenvy = {workspace = true}

models = { path = "../models" }
http-response = { path = "../http-response" }
