[package]
name = "graphql"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { workspace = true }
async-graphql-actix-web = { workspace = true }
graphql_client = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
sea-orm = { workspace = true }
actix-web = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
